--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3DDrucker</title>
-    <!--other script and also external css included over here-->
-    <link rel="stylesheet" type='text/css' href='style.css'>
-    <script type="text/javascript" src="script.js"></script>
-    <!--other script and also external css included over here-->
 
 </head>
 
 <body class="background">
 
-    <div class="center margin-top" >
-        <img src="img/drucker.jpg">
-    </div>
+    <video src="" width="500">
 
 </body>
 
