--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="background">
 
-    <video src="img/video.mp4" width="500">
+    <video controls src="img/video.mp4" width="500">
 
 </body>
 
